--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <body>
     <h3>Generate JSON object with faked values from JsonSchema</h3>
     <div>number of generated array items can be from 1 to 3</div>
+    <a href='https://fredddy123.github.io/generate-jsonschema-from-json/'>switch to <b>JSON -> JsonSchema</b></a>
     <div class="wrapper">
         <div class='left'>
             <textarea id='schemaTextBlock'></textarea>
