title more user friendly

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     </style>
 </head>
 <body>
-    <h3>Generate JSON object with faked values from JsonSchema</h3>
+    <h2>JsonSchema -> JSON</h2>
+    <h5>Generate JSON object with faked values from JsonSchema</h5>
     <div>number of generated array items can be from 1 to 3</div>
     <a href='https://fredddy123.github.io/generate-jsonschema-from-json/'>switch to <b>JSON -> JsonSchema</b></a>
     <div class="wrapper">
